objects/SFDC_Change_Request__c.object
<CustomObject>
    <description>For tracking and working internal Change Requests to IS systems.</description>
    <fields>
        <fullName>Accomplishments__c</fullName>
        <inlineHelpText>What new accomplishments have been made for this Project since the last update?</inlineHelpText>
        <label>Accomplishments</label>
        <length>500</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Actual_Completion_Date__c</fullName>
        <inlineHelpText>Actual date project was released to Production.</inlineHelpText>
        <label>Actual Completion Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Actual_Release_Date__c</fullName>
        <formula>Release__r.Actual_Release_Date__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Actual Release Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Age__c</fullName>
        <formula>IF(
  AND(
     Approved_Date__c &lt;Today(),
     ISPICKVAL(  Status__c  , &quot;12-Deployed&quot;)
  ), Closed_Date__c - Approved_Date__c,

IF(
  AND(
     Approved_Date__c &lt;Today(),
     ISPICKVAL(  Status__c  , &quot;Cancelled&quot;)
  ), 0,

IF( 
  AND(
    Approved_Date__c &lt;Today(),
  OR(
    NOT(ISPICKVAL(  Status__c , &quot;12-Deployed&quot;)),
    NOT(ISPICKVAL(  Status__c  , &quot;Cancelled&quot;))
    )), Today()- Approved_Date__c ,0
)))</formula>
        <inlineHelpText>Number of calendar days from Approved Date to Deployment</inlineHelpText>
        <label>Age</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Approved_Date__c</fullName>
        <inlineHelpText>Date the change request was last in the Approved stage</inlineHelpText>
        <label>Approved Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Assigned_to_Me__c</fullName>
        <formula>OR(Design_Lead__r.Employee_User_Record__c =  $User.Id,
Business_Operations_Contact2__r.Employee_User_Record__c =  $User.Id,
IS_QA_Lead2__r.Employee_User_Record__c =  $User.Id,
Requested_By2__r.Employee_User_Record__c =  $User.Id,
OwnerId = $User.Id)</formula>
        <inlineHelpText>TRUE if the current user is assigned to a role or the owner of the CR.</inlineHelpText>
        <label>Assigned to Me</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Assignment_SLA__c</fullName>
        <formula>IF( NOT(ISNULL(Release__c)) ,  Release_Assigned_Date__c - Approved_Date__c , TODAY()- Approved_Date__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText># of days from Approval to Assignment</inlineHelpText>
        <label>Assignment SLA</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Blocking_Issues_Challenges__c</fullName>
        <inlineHelpText>What issues are preventing this project from moving forward?</inlineHelpText>
        <label>Blocking Issues/Challenges</label>
        <length>500</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Business_Justification__c</fullName>
        <inlineHelpText>Why do this project? 
What happens if we don’t do it? 
Why do it now? 
How critical will the impact of the project be?</inlineHelpText>
        <label>Why do you need it?</label>
        <length>500</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Business_Operations_Contact2__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Business Operations Contact</label>
        <lookupFilter>
            <active>true</active>
            <booleanFilter>1 OR 2</booleanFilter>
            <filterItems>
                <field>Contact.RecordTypeId</field>
                <operation>equals</operation>
                <value>Employee</value>
            </filterItems>
            <filterItems>
                <field>Contact.Employee_User_Record__c</field>
                <operation>notEqual</operation>
                <value></value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Change Requests (Business Operations Contact)</relationshipLabel>
        <relationshipName>Change_Requests3</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Changes_in_Scope__c</fullName>
        <inlineHelpText>Have any work items been Added to or Remove from the Scope of this project since the Requirements were completed?</inlineHelpText>
        <label>Changes in Scope</label>
        <length>500</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Closed_Date__c</fullName>
        <description>date that the status goes to Deployed or Cancelled, to be used in calculating age of request</description>
        <label>Closed Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Code_Config_Completed__c</fullName>
        <inlineHelpText>Date all coding and configuration has been completed and Sandbox system is ready for UAT and SOX testing.</inlineHelpText>
        <label>Code-Config Completed</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Coding_Actual_Hours__c</fullName>
        <label>Coding: Actual Hrs</label>
        <summarizedField>SFDC_Request_Comment__c.Time__c</summarizedField>
        <summaryFilterItems>
            <field>SFDC_Request_Comment__c.Activity_Type__c</field>
            <operation>equals</operation>
            <value>Coding</value>
        </summaryFilterItems>
        <summaryForeignKey>SFDC_Request_Comment__c.SFDC_Change_Request__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Coding_Actual_Hrs__c</fullName>
        <label>zCoding: Actual Hrs</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Coding_Estimated_Hrs__c</fullName>
        <label>Coding: Estimated Hrs</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Config_Actual_Hours__c</fullName>
        <label>Config: Actual Hrs</label>
        <summarizedField>SFDC_Request_Comment__c.Time__c</summarizedField>
        <summaryFilterItems>
            <field>SFDC_Request_Comment__c.Activity_Type__c</field>
            <operation>equals</operation>
            <value>Configuration</value>
        </summaryFilterItems>
        <summaryForeignKey>SFDC_Request_Comment__c.SFDC_Change_Request__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Config_Actual_Hrs__c</fullName>
        <label>zConfig: Actual Hrs</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Config_Estimated_Hrs__c</fullName>
        <label>Config: Estimated Hrs</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Current_Test_Environments_CR__c</fullName>
        <inlineHelpText>Add and remove Test environments as this Change Request is moved between test environments.</inlineHelpText>
        <label>z1_Current Test Environments-CR</label>
        <picklist>
            <picklistValues>
                <fullName>Sandbox-Dev1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sandbox-Dev2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sandbox-Test</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sandbox-Project Specific</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Data_Imports_Updates_Actual_Hrs__c</fullName>
        <label>Data Imports/Updates: Actual Hrs</label>
        <summarizedField>SFDC_Request_Comment__c.Time__c</summarizedField>
        <summaryFilterItems>
            <field>SFDC_Request_Comment__c.Activity_Type__c</field>
            <operation>equals</operation>
            <value>Data Import/Updates</value>
        </summaryFilterItems>
        <summaryForeignKey>SFDC_Request_Comment__c.SFDC_Change_Request__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Data_Imports_Updates_Estimated_Hrs__c</fullName>
        <label>Data Imports/Updates: Estimated Hrs</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Deployment_Planning__c</fullName>
        <description>Created for CR-20141204-8244</description>
        <label>Deployment Planning</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Description_Objective__c</fullName>
        <inlineHelpText>Summarize what this CR will improve, fix or change.  This summary will be used in SOX Change Approval documents, intended for audiences that may or may not regularly use Salesforce. Populated by Solution designer for this CR.</inlineHelpText>
        <label>Description/Objective</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Design_Actual_Hours__c</fullName>
        <label>Design: Actual Hrs</label>
        <summarizedField>SFDC_Request_Comment__c.Time__c</summarizedField>
        <summaryFilterItems>
            <field>SFDC_Request_Comment__c.Activity_Type__c</field>
            <operation>equals</operation>
            <value>Analysis/Design</value>
        </summaryFilterItems>
        <summaryForeignKey>SFDC_Request_Comment__c.SFDC_Change_Request__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Design_Actual_Hrs__c</fullName>
        <label>zDesign: Actual Hrs</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Design_Estimated__c</fullName>
        <defaultValue>1</defaultValue>
        <label>Design: Estimated Hrs</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Design_Lead__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Design Lead</label>
        <lookupFilter>
            <active>true</active>
            <booleanFilter>1 OR 2</booleanFilter>
            <filterItems>
                <field>Contact.RecordTypeId</field>
                <operation>equals</operation>
                <value>Employee</value>
            </filterItems>
            <filterItems>
                <field>Contact.Employee_User_Record__c</field>
                <operation>notEqual</operation>
                <value></value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Change Requests (Design Lead)</relationshipLabel>
        <relationshipName>Change_Requests5</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Executive_Sponsor__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Who is sponsoring this request and approving budgets/resources/etc?</inlineHelpText>
        <label>Executive Sponsor</label>
        <lookupFilter>
            <active>false</active>
            <filterItems>
                <field>Contact.RecordTypeId</field>
                <operation>equals</operation>
                <value>Employee, Employee</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Change Requests (Executive Sponsor)</relationshipLabel>
        <relationshipName>Change_Requests</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Expected_Resolution__c</fullName>
        <label>Expected Resolution</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Functionality__c</fullName>
        <inlineHelpText>How much of the system is affected by this outage?</inlineHelpText>
        <label>Functionality</label>
        <picklist>
            <picklistValues>
                <fullName>All</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Critical</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Partial</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>IS_Environments__c</fullName>
        <formula>IF(
NOT(ISBLANK(Release__c)), 
Release__r.Sandbox_Environments__c,
&quot; &quot;
)</formula>
        <label>IS Environments</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IS_QA_Actual_Hours__c</fullName>
        <label>IS QA: Actual Hrs</label>
        <summarizedField>SFDC_Request_Comment__c.Time__c</summarizedField>
        <summaryFilterItems>
            <field>SFDC_Request_Comment__c.Activity_Type__c</field>
            <operation>equals</operation>
            <value>QA</value>
        </summaryFilterItems>
        <summaryForeignKey>SFDC_Request_Comment__c.SFDC_Change_Request__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>IS_QA_Actual_Hrs__c</fullName>
        <label>zIS QA: Actual Hrs</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>IS_QA_Estimated_Hrs__c</fullName>
        <label>IS QA: Estimated Hrs</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>IS_QA_Lead2__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Lead QA</label>
        <lookupFilter>
            <active>true</active>
            <booleanFilter>1 OR 2</booleanFilter>
            <filterItems>
                <field>Contact.RecordTypeId</field>
                <operation>equals</operation>
                <value>Employee</value>
            </filterItems>
            <filterItems>
                <field>Contact.Employee_User_Record__c</field>
                <operation>notEqual</operation>
                <value></value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Change Requests (IS QA Lead)</relationshipLabel>
        <relationshipName>Change_Requests4</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>IS_System_Application__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>IS System Application</label>
        <lookupFilter>
            <active>true</active>
            <errorMessage>The IS System Application must be of the record type &quot;Application&quot;</errorMessage>
            <filterItems>
                <field>IS_System__c.RecordTypeId</field>
                <operation>equals</operation>
                <value>Application</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>IS_System__c</referenceTo>
        <relationshipLabel>Change Requests</relationshipLabel>
        <relationshipName>Change_Requests1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>IS_System_Instance__c</fullName>
        <formula>IF(ISBLANK(IS_System_Application__r.Primary_System__c),IS_System_Application__r.Instance_Name__c,IS_System_Application__r.Primary_System__r.Instance_Name__c)</formula>
        <label>IS System Instance</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IS_System__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>IS System</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>IS_System__c.RecordTypeId</field>
                <operation>equals</operation>
                <value>System</value>
            </filterItems>
            <infoMessage>Select an IS System with record type System</infoMessage>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>IS_System__c</referenceTo>
        <relationshipLabel>Change Requests</relationshipLabel>
        <relationshipName>Change_Requests</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>IS_Team_Involved__c</fullName>
        <inlineHelpText>To delete a name you must highlight with your mouse and click &apos;Backspace&apos; on your keyboard. When adding a new name, it must be added to the end of the field separated by a comma.</inlineHelpText>
        <label>IS Team Involved</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Latest_Public_Update__c</fullName>
        <label>Latest Public Update</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Manual_Steps_Post_Deploy_Est_Mins__c</fullName>
        <inlineHelpText>Estimated time in minutes for the post-deployment manual steps</inlineHelpText>
        <label>Manual Steps Post-Deploy Est (Mins)</label>
        <summarizedField>IS_System_Modification__c.Post_Deployment_Estimate_Mins__c</summarizedField>
        <summaryForeignKey>IS_System_Modification__c.Change_Request__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Manual_Steps_Pre_Deploy_Est_Mins__c</fullName>
        <inlineHelpText>Estimated time for pre-deployment steps in minutes</inlineHelpText>
        <label>Manual Steps Pre-Deploy Est (Mins)</label>
        <summarizedField>IS_System_Modification__c.Pre_Deployment_Estimate_Mins__c</summarizedField>
        <summaryForeignKey>IS_System_Modification__c.Change_Request__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Manual_Steps_Pre_Validate_Est_Mins__c</fullName>
        <inlineHelpText>Estimated time for pre-validation deployment steps (in minutes)</inlineHelpText>
        <label>Manual Steps Pre-Validate Est (Mins)</label>
        <summarizedField>IS_System_Modification__c.Pre_Validation_Estimate_Mins__c</summarizedField>
        <summaryForeignKey>IS_System_Modification__c.Change_Request__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Master_Topic__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Master Topic</label>
        <referenceTo>SFDC_Change_Request__c</referenceTo>
        <relationshipLabel>Change Requests (Master Topic)</relationshipLabel>
        <relationshipName>Child_Topics</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Mods_with_Data_Steps__c</fullName>
        <label>Mods with Data Steps</label>
        <summaryFilterItems>
            <field>IS_System_Modification__c.Has_Data_Modification__c</field>
            <operation>equals</operation>
            <value>True</value>
        </summaryFilterItems>
        <summaryForeignKey>IS_System_Modification__c.Change_Request__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Mods_with_Manual_Steps__c</fullName>
        <label>Mods with Manual Steps</label>
        <summaryFilterItems>
            <field>IS_System_Modification__c.Has_Manual_Step_s__c</field>
            <operation>equals</operation>
            <value>True</value>
        </summaryFilterItems>
        <summaryForeignKey>IS_System_Modification__c.Change_Request__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Multiphase_UAT_Required__c</fullName>
        <description>Read/Write Controlled By Permission Set.</description>
        <label>Multiphase UAT Required?</label>
        <picklist>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Yes - Pending</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Yes - Initial Phase Complete</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Yes - Final UAT Approved</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Next_Steps__c</fullName>
        <inlineHelpText>Enter the next steps to be taken toward completing this project.</inlineHelpText>
        <label>Next Steps</label>
        <length>500</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Next_Update__c</fullName>
        <inlineHelpText>Next update due to users.</inlineHelpText>
        <label>Next Update</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Notification_Status_Change__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Send an email notification to the &apos;Requestsed By&apos; and the &apos;Business Operations Contact&apos; people whenever the Status changes.</inlineHelpText>
        <label>Notification: Status Change</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>OPTIONAL_Recommended_Solution__c</fullName>
        <label>OPTIONAL: Recommended Solution</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Of_Manual_Setup_Mods__c</fullName>
        <label>z1_# Of Manual Setup Mods</label>
        <summaryFilterItems>
            <field>IS_System_Modification__c.Manual_Step__c</field>
            <operation>equals</operation>
            <value>True</value>
        </summaryFilterItems>
        <summaryForeignKey>IS_System_Modification__c.Change_Request__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Other_Manual_Step_Estimate_Mins__c</fullName>
        <label>Other Manual Step Estimate (Mins)</label>
        <summarizedField>IS_System_Modification__c.Other_Manual_Steps_Estimate_Mins__c</summarizedField>
        <summaryForeignKey>IS_System_Modification__c.Change_Request__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Other_Notes__c</fullName>
        <label>Other Notes</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Parent_Change_Request__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>If this request is associated with and will be deployed with one or more other Change Requests, enter the main/parent Level III CR here.</inlineHelpText>
        <label>Parent Change Request</label>
        <lookupFilter>
            <active>false</active>
            <errorMessage>Only Level III requests can be a Parent CR</errorMessage>
            <filterItems>
                <field>SFDC_Change_Request__c.RecordTypeId</field>
                <operation>equals</operation>
                <value>Level III</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>SFDC_Change_Request__c</referenceTo>
        <relationshipName>Change_Requests</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Parent_System__c</fullName>
        <description>Used only on L3&apos;s for now.  Once the list of IS Systems and IS System Apps is built out more, this will replace the IS System field on L2&apos;s</description>
        <formula>IF(ISBLANK(IS_System_Application__r.Primary_System__c),IS_System_Application__r.Name,IS_System_Application__r.Primary_System__r.Name)</formula>
        <label>Parent System</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Priority__c</fullName>
        <description>Please note that the values for this picklist should be the same on both the Change Request and Case Object (eTech Support Record Type ONLY). If you are modifying one, please update the other.</description>
        <label>Priority</label>
        <picklist>
            <picklistValues>
                <fullName>A - Critical</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>B - High</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>C - Standard</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>D - Low</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>E - Trivial</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Project_Kickoff_Date__c</fullName>
        <inlineHelpText>Project Kickoff Meeting Date</inlineHelpText>
        <label>Project Kickoff Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>QA_Results_Details__c</fullName>
        <description>For explanation of QA testing results; accessible with SFDC CR Testing Fields permission set</description>
        <label>QA Results Details</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Rank_Change_Mgmt_Team_Planning__c</fullName>
        <description>Permission set controls access to this field - &quot;SFDC Change Mgmt - CMTeam&quot;.</description>
        <inlineHelpText>Change Mangement Team notes from prioritization meeting to discuss Approved CR&apos;s that have top ranking from each department.  Please preceed your notes with the date and your initials.</inlineHelpText>
        <label>Rank-Change Mgmt Team Planning</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Rank_Department_Last_Updated__c</fullName>
        <inlineHelpText>Auto-populated with the date the Priority-Department Planning field was last updated.  Used to help Business Ops/Liaisons Teams tell if they&apos;ve recently assessed the prioritization.</inlineHelpText>
        <label>Rank-Department Last Updated</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Rank_Department_Planning__c</fullName>
        <description>Permission set controls access to this field - &quot;SFDC Change Mgmt - Department&quot;.</description>
        <inlineHelpText>Business Ops/Liaisons Teams order (1-n) the rank of each dept&apos;s CR&apos;s w no repeating #s (Status: at least Appvd, not in/past In Dev).  Depts=Requester Department picklist field, name in front of hyphen.  Due Mon., noon ET, the wk prior to a deployment.</inlineHelpText>
        <label>Rank-Department Planning</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Related_Business_Process__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>The main business process that is affected by this change</inlineHelpText>
        <label>Related Business Process</label>
        <referenceTo>IS_Business_Process__c</referenceTo>
        <relationshipLabel>Change Requests</relationshipLabel>
        <relationshipName>Change_Requests</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Release_Assigned_Date__c</fullName>
        <description>to capture via workflow the date a release is assigned to the CR, to be used to calculate SLA</description>
        <label>Release Assigned Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Release_Change_Counter__c</fullName>
        <inlineHelpText>Populated automatically, to count how many times the CR has changed releases.</inlineHelpText>
        <label>Release Change Counter</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Release_Change_Reason__c</fullName>
        <description>Created as per CR-20130830-3549</description>
        <inlineHelpText>Required to be updated each time the Release is changed. (permission set access)</inlineHelpText>
        <label>Release Change Reason</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Release_Stage__c</fullName>
        <formula>TEXT(Release__r.Status__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Release Stage</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Release__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>SFDC Release Cycle this Change Request scheduled for.</inlineHelpText>
        <label>Release</label>
        <lookupFilter>
            <active>true</active>
            <booleanFilter>1 AND ((2 AND 3) OR (4 AND 5))</booleanFilter>
            <filterItems>
                <field>SFDC_Release__c.Status__c</field>
                <operation>notEqual</operation>
                <value>Deployed</value>
            </filterItems>
            <filterItems>
                <field>$Source.RecordTypeId</field>
                <operation>equals</operation>
                <value>Level II, Level III</value>
            </filterItems>
            <filterItems>
                <field>SFDC_Release__c.RecordTypeId</field>
                <operation>equals</operation>
                <value>eTech Dev</value>
            </filterItems>
            <filterItems>
                <field>$Source.RecordTypeId</field>
                <operation>equals</operation>
                <value>App Update</value>
            </filterItems>
            <filterItems>
                <field>SFDC_Release__c.RecordTypeId</field>
                <operation>equals</operation>
                <value>App Release</value>
            </filterItems>
            <isOptional>true</isOptional>
        </lookupFilter>
        <referenceTo>SFDC_Release__c</referenceTo>
        <relationshipLabel>Change Requests</relationshipLabel>
        <relationshipName>Change_Requests</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Reported_By__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Reported By</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Contact.RecordTypeId</field>
                <operation>equals</operation>
                <value>Employee</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Contact</referenceTo>
        <relationshipName>Change_Requests1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Request_Description__c</fullName>
        <label>What is the Business Requirement?</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Requested_By2__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Requested By</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Contact.RecordTypeId</field>
                <operation>equals</operation>
                <value>Employee</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Change Requests (Requested_By)</relationshipLabel>
        <relationshipName>Change_Requests2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Requested_Completion_Date__c</fullName>
        <inlineHelpText>Date Requester would like project to go-live in Production.</inlineHelpText>
        <label>Requested Completion Date</label>
        <type>Date</type>
    </fields>
</CustomObject>